force-app/main/default/objects/F_Alumni__c/F_Alumni__c.object-meta.xml
<CustomObject>
    <label>F Alumni</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>F Alumni No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F Alumnies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>