force-app/main/default/objects/F_Alumni__c/fields/F_Alumni_Details__c.field-meta.xml
<CustomField>
    <fullName>F_Alumni_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F Alumni Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>F Alumnies</relationshipLabel>
    <relationshipName>F_Alumnies</relationshipName>
    <type>Lookup</type>
</CustomField>