force-app/main/default/objects/F_Alumni__c/fields/F_Got_an_Offer__c.field-meta.xml
<CustomField>
    <fullName>F_Got_an_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F Got an Offer</label>
    <type>Checkbox</type>
</CustomField>