force-app/main/default/objects/F_Alumni__c/fields/FCourse_Details__c.field-meta.xml
<CustomField>
    <fullName>FCourse_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCourse Details</label>
    <referenceTo>FCourse_Detail__c</referenceTo>
    <relationshipLabel>F Alumnies</relationshipLabel>
    <relationshipName>F_Alumnies</relationshipName>
    <type>Lookup</type>
</CustomField>